--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,11 @@
 # Kafka≈‰÷√
 kafka.broker.list=cluster01:9092,cluster01:9092,cluster01:9092
-kafka.topic=dwd_topic_ic
+kafka.topic=ods_log
 kafka.group=analysisGroupa
 
 # Redis≈‰÷√
-redis.host=hdp1
+redis.host=10.0.46.149
 redis.port=6379
+
+# es≈‰÷√
+es.http=http://cluster01:9200
