--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 # Kafka≈‰÷√
 kafka.broker.list=cluster01:9092,cluster01:9092,cluster01:9092
 kafka.topic=ods_log
-kafka.group=analysisGroupa
+kafka.group=analysis
 
 # Redis≈‰÷√
 redis.host=10.0.46.149
