--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,11 +1,12 @@
 # Kafka≈‰÷√
 kafka.broker.list=cluster01:9092,cluster01:9092,cluster01:9092
 kafka.topic=ods_log
-kafka.group=analysis
+kafka.group=analysises02
 
 # Redis≈‰÷√
 redis.host=10.0.46.149
 redis.port=6379
 
 # es≈‰÷√
-es.http=http://cluster01:9200
+#es.http=http://cluster01:9200
+es.http=http://10.0.46.146:9200
